[package]
name = "tic-sys"
version = "0.1.0"
authors = ["Russell Hay <russell.hay@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"

[build-dependencies]
bindgen = "0.55.1"
